create feed list, test api connect

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    
+
     defaultConfig {
         applicationId "com.silatsaktistudios.shreddit"
         minSdkVersion 19
@@ -61,6 +61,8 @@ dependencies {
 
     //Glide dependencies for picture loading and caching
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //test dependencies
